# ddup_player

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  button.h  layer.h  player_control_bar.cpp  player_progess_bar.cpp  progress_bar.h  sdl_button.cpp  sdl_button.h  sdl_layer.h  sdl_progress_bar.cpp  sdl_progress_bar.h  sdl_user_event.h  sdl_video.cpp  sdl_video.h  sdl_window.cpp  sdl_window.h  test.cpp  video.h  widget.h
app/: ddup_app.cpp
base_util/: ddup_timer.h  media_type.cpp  media_type.h
doc/html/: annotated.html  annotated_dup.js  button_8h.html  button_8h__dep__incl.map  button_8h__dep__incl.md5  button_8h__incl.map  button_8h__incl.md5  button_8h_source.html  class_auto_lock-members.html  class_auto_lock.html  class_auto_lock.js  class_buffer_base-members.html  class_buffer_base.html  class_buffer_base.js  class_buffer_base__inherit__graph.dot  class_buffer_base__inherit__graph.map  class_buffer_base__inherit__graph.md5  class_buffer_base_a32fbf76bd8f1eab1adbfa783cff2b26e_icgraph.dot  class_buffer_base_a32fbf76bd8f1eab1adbfa783cff2b26e_icgraph.map  class_buffer_base_a32fbf76bd8f1eab1adbfa783cff2b26e_icgraph.md5  class_buffer_base_a611e3f4eb911fc58bc811062c38b54eb_cgraph.dot  class_buffer_base_a611e3f4eb911fc58bc811062c38b54eb_cgraph.map  class_buffer_base_a611e3f4eb911fc58bc811062c38b54eb_cgraph.md5  class_buffer_base_a611e3f4eb911fc58bc811062c38b54eb_icgraph.dot  class_buffer_base_a611e3f4eb911fc58bc811062c38b54eb_icgraph.map  class_buffer_base_a611e3f4eb911fc58bc811062c38b54eb_icgraph.md5  class_buffer_base_a76e6959faff94d7a0561003d390d84c8_cgraph.dot  class_buffer_base_a76e6959faff94d7a0561003d390d84c8_cgraph.map  class_buffer_base_a76e6959faff94d7a0561003d390d84c8_cgraph.md5  class_buffer_base_a76e6959faff94d7a0561003d390d84c8_icgraph.map  class_buffer_base_a76e6959faff94d7a0561003d390d84c8_icgraph.md5  class_buffer_base_a801e2e43bb032c4b455f4b18a224e838_cgraph.dot  class_buffer_base_a801e2e43bb032c4b455f4b18a224e838_icgraph.dot  class_buffer_base_a801e2e43bb032c4b455f4b18a224e838_icgraph.map  class_buffer_base_a801e2e43bb032c4b455f4b18a224e838_icgraph.md5  class_buffer_base_a851b22de6f6f587c912ebd54f77110e9_cgraph.dot  class_buffer_base_a851b22de6f6f587c912ebd54f77110e9_cgraph.map  class_buffer_base_a851b22de6f6f587c912ebd54f77110e9_cgraph.md5  class_buffer_base_a851b22de6f6f587c912ebd54f77110e9_icgraph.dot  class_buffer_base_a851b22de6f6f587c912ebd54f77110e9_icgraph.map  (+804 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enums_1.js  (+70 more)
gui_widget/base/: button.h  layer.h  progress_bar.h  texture_builder.h  video.h  widget.h  window.h
gui_widget/sdl_impl/: sdl_audio.cpp  sdl_audio.h  sdl_button.cpp  sdl_button.h  sdl_combo_box.cpp  sdl_combo_box.h  sdl_dirent_window.cpp  sdl_dirent_window.h  sdl_dirent_window_widget.cpp  sdl_dirent_window_widget.h  sdl_font.cpp  sdl_font.h  sdl_gif.cpp  sdl_gif.h  sdl_image.cpp  sdl_image.h  sdl_image_view_panel.cpp  sdl_image_view_panel.h  sdl_image_widget.cpp  sdl_image_widget.h  sdl_label.cpp  sdl_label.h  sdl_label_widget.cpp  sdl_label_widget.h  sdl_layer.h  sdl_playback_panel.cpp  sdl_playback_panel.h  sdl_progress_bar.cpp  sdl_progress_bar.h  sdl_rect.cpp  sdl_rect.h  sdl_text_box.cpp  sdl_text_box.h  sdl_texture_builder.cpp  sdl_texture_builder.h  sdl_user_event.h  sdl_util.cpp  sdl_util.h  sdl_video.cpp  sdl_video.h  (+4 more)
gui_widget/sdl_impl/gmock/: gmock_gui_main.cpp  gmock_sdl_font.cpp  gmock_sdl_image.cpp  sdl_combo_box_test.cpp  sdl_dirent_window_test.cpp  sdl_font_test.cpp  sdl_gif_test.cpp  sdl_image_test.cpp  sdl_label_test.cpp  sdl_progress_bar_test.cpp  sdl_rect_test.cpp  sdl_text_box_test.cpp  sdl_vscroll_test.cpp
kiss_sdl/: kiss_draw.c
log/: ddup_log.h
player/: buffer.h  component.cpp  component.h  ddup_player.cpp  ddup_player.h  decoder.cpp  decoder.h  demux.cpp  demux.h  event_listener.h  fifo_controller.cpp  fifo_controller.h  pipeline.cpp  pipeline.h  processer.cpp  processer.h  sink.cpp  sink.h  stream.cpp  stream.h  util.h
player/ffmpeg_impl/: ffmpeg_decoder.cpp  ffmpeg_decoder.h  ffmpeg_demux.cpp  ffmpeg_demux.h  ffmpeg_processer.cpp  ffmpeg_processer.h  ffmpeg_stream.cpp  ffmpeg_stream.h
player/gmock/: gmock_fifo.cpp  gmock_main.cpp  gmock_sdl_audio.cpp  gmock_test.cpp
player/sdl_impl/: sdl_audio_sink.cpp  sdl_audio_sink.h  sdl_video_sink.cpp  sdl_video_sink.h
player/sdl_sink_impl/: sdl_audio_sink.cpp  sdl_audio_sink.h  sdl_video_sink.cpp  sdl_video_sink.h
res/: 1148x681.rgba  1227x707.rgba  891x473.rgba
tools/: auto_format.sh  generate_doxygen_docs.sh
